@@ -16,22 +16,41 @@
  * License along with this program; if not, write to the
  * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.
+ *
+ * Author: Mikael Hallendal <micke@codefactory.se>
  */
 
-#ifndef __YELP_ERROR_H__
-#define __YELP_ERROR_H__
+#include <libgnomevfs/gnome-vfs.h>
+#include "yelp-uri.h"
 
-#include <glib.h>
-
-#define YELP_ERROR yelp_error_quark ()
-
-typedef enum {
-	YELP_ERROR_URI_NOT_EXIST,
-        YELP_ERROR_DOCBOOK_2_HTML,
-        YELP_ERROR_FAILED_OPEN
+int
+main (int argc, char **argv)
+{
+        YelpURI *uri;
+        GError  *error = NULL;
         
-} YelpError;
+        if (argc < 2) {
+                g_print ("Usage: test-uri uri\n");
+                return 1;
+        }
 
-GQuark yelp_error_quark (void) G_GNUC_CONST;
+	gnome_vfs_init ();
 
-#endif /* __YELP_ERROR_H__ */
+        uri = yelp_uri_new (argv[1], &error);
+        
+        if (error) {
+                g_print ("Error: %s\n", error->message);
+
+                return 1;
+        } 
+
+        g_print ("URI_TYPE   : %d\n", yelp_uri_get_type (uri));
+	g_print ("URI_PATH   : %s\n", yelp_uri_get_path (uri));
+	g_print ("URI_SECTION: %s\n", yelp_uri_get_section (uri));
+
+	yelp_uri_unref (uri);
+
+        gnome_vfs_shutdown ();
+
+        return 0;
+}
